# AITAXPDFSMASH

./: Cargo.toml  README.md
.github/workflows/: build.yml
.gitignore/workflows/: build.yml
crates/cli-interface/: Cargo.toml
crates/cli-interface/src/: arguments.rs  lib.rs
crates/cli-interface/src/banner/: banner.txt  mod.rs
crates/cracker/: Cargo.toml
crates/cracker/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs
crates/producer/: Cargo.toml
crates/producer/src/: custom_query.rs  dates.rs  default_query.rs  dictionary.rs  lib.rs  number_ranges.rs
src/: main.rs
