[workspace]
members = [
    "crates/cli-interface",
    "crates/cracker",
    "crates/engine",
    "crates/producer",
    "crates/gui"
]

[workspace.package]
version = "2.0.1"
edition = "2021"
authors = ["Ling <Ling@aitaxadvisers.com>", "แมตตี้", "AI-TAX ADVISERS"]

[workspace.dependencies]
producer = { path = "crates/producer" }
cracker = { path = "crates/cracker" }
engine = { path = "crates/engine" }
cli-interface = { path = "crates/cli-interface" }

bytecount = "0.6.7"
log = "0.4.19"
pdf = "0.9.0"
anyhow = "1.0.72"
indicatif = "0.17"
crossbeam = "0.8.2"
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.0.4"

[package]
name = "pdfrip"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cli-interface.workspace = true
anyhow.workspace = true
pretty_env_logger = "0.5.0"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
