[workspace]
members = [
    "crates/cli-interface",
    "crates/cracker",
    "crates/engine",
    "crates/producer",
    "crates/gui"
]

[workspace.package]
version = "2.0.1"
edition = "2021"
authors = ["Ling <Ling@aitaxadvisers.com>", "แมตตี้", "AI-TAX ADVISERS"]

[workspace.dependencies]
producer = { path = "crates/producer" }
cracker = { path = "crates/cracker" }
engine = { path = "crates/engine" }
gui = { path = "crates/gui" }
cli-interface = { path = "crates/cli-interface" }
anyhow = "1.0.72"
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.0.4"
indicatif = "0.17"
log = "0.4.19"
crossbeam = "0.8.2"
pdf = "0.8.1"
bytecount = "0.6.7"
rayon = "1.7"

[package]
name = "pdfrip"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cli-interface.workspace = true
anyhow.workspace = true
pretty_env_logger = "0.5.0"
indicatif.workspace = true
rayon.workspace = true
pdf.workspace = true
bytecount.workspace = true
log.workspace = true
crossbeam.workspace = true
clap.workspace = true
colored.workspace = true

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
