[package]
name = "pdfrip-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[[bin]]
name = "pdfrip-gui"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
