[package]
name = "pdfrip"
version = "2.0.1"
edition = "2021"

[dependencies]
producer.workspace = true
crossbeam.workspace = true

[target.'cfg(windows)'.dependencies]

native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[[bin]]
name = "pdfrip-gui"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
